--- a/priv/templates/example_config.eex
+++ b/priv/templates/example_config.eex
@@ -1,12 +1,17 @@
-use Mix.Releases.Config
+use Mix.Releases.Config,
+    # This sets the default release built by `mix release`
+    default_release: :<%= Keyword.get(release, :release_name) %>,
+    # This sets the default environment used by `mix release`
+    default_environment: :default
 <%= unless no_docs do %>
-# A full list of config options is as follows:
+# A full list of config options for both releases
+# and environments is as follows:
 #
 # - dev_mode (boolean);
 #       symlink compiled files into the release,
 #       so that you can release once, but see changes when you recompile
 #       the project. This is only for development.
-# - paths (list of strings);
+# - code_paths (list of strings);
 #       a list of file paths, representing code paths
 #       to search for compiled BEAMs
 # - vm_args (string);
@@ -21,7 +26,7 @@ use Mix.Releases.Config
 # - include_system_libs (boolean | string);
 #       should system libs be included in the release,
 #       a path to system libs to be included can also be provided
-# - strip_debug_info? (boolean);
+# - strip_debug_info (boolean);
 #       should debugging info be stripped from BEAM files in the release
 # - erl_opts (list of strings);
 #       a list of Erlang VM options to be used
@@ -47,15 +52,22 @@ use Mix.Releases.Config
 # - pre_stop_hook: nil,
 # - post_stop_hook: nil
 <% end %>
-config debug?: false,
-       include_erts: true
 <%= unless no_docs do %>
-# You may define one or more releases in this file,
-# the first one in the file will be built by default,
-# but you may set another with the `:selected_release` config
-# option, or by passing `--release <name>` when running `mix release`<% end %>
+# You may define one or more environments in this file,
+# an environment's settings will override those of a release
+# when building in that environment, this combination of release
+# and environment configuration is called a profile<%= end %>
+environment :default do
+  dev_mode: false,
+  include_erts: true
+end
+<%= unless no_docs do %>
+# You may define one or more releases in this file.
+# If you have not set a default release, or selected one
+# when running `mix release`, the first release in the file
+# will be used by default
 <%= for release <- releases do %>
-release :<%= Keyword.get(release, :release_name) %>, version(:<%= Keyword.get(release, :release_name)%>),
+release :<%= Keyword.get(release, :release_name) %>, current_version(:<%= Keyword.get(release, :release_name)%>),
   [<%= Enum.map(Keyword.get(release, :release_applications), fn {app, start_type} ->
       "#{app}: :#{start_type}"
     end) |> Enum.join(",\n   ") %>]
