--- a/priv/templates/boot_loader.eex
+++ b/priv/templates/boot_loader.eex
@@ -4,7 +4,7 @@ set -e
 SCRIPT_DIR="$(cd $(dirname "$0") && pwd -P)"
 RELEASE_ROOT_DIR="$(cd "$SCRIPT_DIR/.." && pwd)"
 RELEASES_DIR="$RELEASE_ROOT_DIR/releases"
-REL_NAME="<%= rel_name %>"
+REL_NAME="<%= release_name %>"
 REL_VSN=$(cat "$RELEASES_DIR"/start_erl.data | cut -d' ' -f2)
 ERTS_VSN=$(cat "$RELEASES_DIR"/start_erl.data | cut -d' ' -f1)
 
