--- a/priv/templates/boot.eex
+++ b/priv/templates/boot.eex
@@ -105,16 +105,21 @@ _rem_sh() {
     TICKTIME="$(nodetool rpcterms net_kernel get_net_ticktime)"
 
     # Setup remote shell command to control node
-    #exec "$BINDIR/erl" "$NAME_TYPE" "$id" -remsh "$NAME" -boot start_clean \
-    #    -boot_var ERTS_LIB_DIR "$ERTS_LIB_DIR" \
-    #    -setcookie "$COOKIE" -hidden -kernel net_ticktime $TICKTIME
-    exec "$BINDIR/erl" \
-         -pa "$ROOTDIR"/lib/*/ebin -pa "$CONSOLIDATED_DIR" \
-         -hidden -noshell \
-         -boot start_clean -boot_var ERTS_LIB_DIR "$ERTS_LIB_DIR" \
-         -kernel net_ticktime $TICKTIME \
-         -user Elixir.IEx.CLI "$NAME_TYPE" "$id" -setcookie "$COOKIE" \
-         -extra --no-halt +iex -"$NAME_TYPE" "$id" --cookie "$COOKIE" --remsh "$NAME"
+    if [ ! -z "$USE_ERL_SHELL" ]; then
+        exec "$BINDIR/erl" \
+            -hidden \
+            -boot start_clean -boot_var ERTS_LIB_DIR "$ERTS_LIB_DIR" \
+            -kernel net_ticktime $TICKTIME \
+            "$NAME_TYPE" "$id" -remsh "$NAME" -setcookie "$COOKIE"
+    else
+        exec "$BINDIR/erl" \
+            -pa "$ROOTDIR"/lib/*/ebin -pa "$CONSOLIDATED_DIR" \
+            -hidden -noshell \
+            -boot start_clean -boot_var ERTS_LIB_DIR "$ERTS_LIB_DIR" \
+            -kernel net_ticktime $TICKTIME \
+            -user Elixir.IEx.CLI "$NAME_TYPE" "$id" -setcookie "$COOKIE" \
+            -extra --no-halt +iex -"$NAME_TYPE" "$id" --cookie "$COOKIE" --remsh "$NAME"
+    fi
 }
 
 # Output a start command for the last argument of run_erl
