Change signal names from SIG<NAME> to <NAME>. Closes #19

--- a/priv/templates/boot.eex
+++ b/priv/templates/boot.eex
@@ -532,7 +532,7 @@ case "$1" in
             echo "Root: $ROOTDIR"
         fi;
 
-        trap '{}' QUIT TERM KILL HUP SIGUSR1 SIGUSR2
+        trap '{}' QUIT TERM KILL HUP USR1 USR2
         "$@" -- ${1+$ARGS} &
         __bg_pid=$!
         [ -f "$POST_START_HOOK" ] && . "$POST_START_HOOK"
