Handle release_handler errors when installing a release upgrade

--- a/priv/templates/install_upgrade.eex
+++ b/priv/templates/install_upgrade.eex
@@ -92,7 +92,18 @@ install_and_permafy(TargetNode, RelName, Vsn) ->
                     [io_lib:format("* ~s\t~s~n",[V,S]) ||  {V,S} <- which_releases(TargetNode)]),
             ?INFO("Installed versions:~n~s", [VerList]),
             ?INFO("ERROR: Unable to revert to '~s' - not installed.~n", [Vsn]),
-            erlang:halt(2)
+            erlang:halt(2);
+        %% As described in http://erlang.org/doc/man/appup.html,
+        %% when executing a relup containing soft_purge instructions:
+        %%     If the value is soft_purge, release_handler:install_release/1
+        %%     returns {error, {old_processes, Mod}}
+        {error, {old_processes, Mod}} ->
+            ?INFO("ERROR: unable to install '~s' - old processes still running code from ~p~n",
+                  [Vsn, Mod]),
+            erlang:halt(3);
+        {error, Reason} ->
+            ?INFO("ERROR: release_handler:install_release failed: ~p~n", [Reason]),
+            erlang:halt(3)
     end.
 
 permafy(TargetNode, RelName, Vsn) ->
