Fix #59 - fix handling of signals on Ubuntu with dash

--- a/priv/templates/boot_loader.eex
+++ b/priv/templates/boot_loader.eex
@@ -16,7 +16,7 @@ _cleanup() {
 
 case "$1" in
     foreground)
-        trap '_cleanup' HUP INT TERM QUIT
+        trap '_cleanup' HUP INT TERM QUIT EXIT USR1 USR2
 
         "$RELEASES_DIR/$REL_VSN/$REL_NAME.sh" $@ &
         __pid=$!
