--- a/priv/templates/boot.eex
+++ b/priv/templates/boot.eex
@@ -542,7 +542,7 @@ case "$1" in
             echo "Root: $ROOTDIR"
         fi;
 
-        trap '{}' QUIT TERM KILL HUP USR1 USR2
+        trap '{}' EXIT QUIT TERM KILL HUP USR1 USR2
         "$@" -- ${1+$ARGS} &
         __bg_pid=$!
         [ -f "$POST_START_HOOK" ] && . "$POST_START_HOOK"
